--- a/demo_proj/wiki/html/alek.html
+++ b/demo_proj/wiki/html/alek.html
@@ -21,7 +21,7 @@
 <h1 class="title">alek.md</h1>
 </header>
 <p><a href="index.html">index</a> # header</p>
-<p>list:</p>
-<p>i am innocent</p>
+<p><a href="alek.html">Alek</a> is a type of <a href="blah.html">blah</a>, that is pretty <a href="epic.html">EPIC</a>!</p>
+<p>So what?</p>
 </body>
 </html>
