--- a/demo_proj/wiki/html/theland.html
+++ b/demo_proj/wiki/html/theland.html
@@ -12,6 +12,7 @@
       div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
   <link rel="stylesheet" href="pandoc.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_CHTML-full" type="text/javascript"></script>
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
@@ -22,5 +23,6 @@
 </header>
 <p><a href="index.html">index</a> # <a href="theland.html">theland</a></p>
 <p><a href="theland.html">theland</a> is a place where many <a href="animal.html">animal</a>s live. The <a href="animal.html">animal</a>s like to eat food, but eventually age: they grow old and die.</p>
+<p><span class="math display">\[\int_{-\infty}^\infty e^{-x^2} dx = \sqrt{\pi}.\]</span></p>
 </body>
 </html>
