--- a/demo_proj/wiki/html/index.html
+++ b/demo_proj/wiki/html/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header id="title-block-header">
-<h1 class="title">index</h1>
+<h1 class="title">index.html</h1>
 </header>
 <h1 id="wiki">WIKI</h1>
 <ul>
@@ -26,5 +26,15 @@
 <li><a href="theland.html">theland</a></li>
 <li><a href="animal.html">animal</a></li>
 </ul>
+
+  <div class="sky-container">
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+  </div>
+
+
 </body>
 </html>
